force-app/main/default/objects/Rule_Pack__mdt/Rule_Pack__mdt.object-meta.xml
<CustomObject>
    <label>Rule Pack</label>
    <pluralLabel>Rule Packs</pluralLabel>
    <description>Defines reusable rule packs for static analysis, including detection patterns and fix templates.</description>
</CustomObject>