force-app/main/default/objects/Rule_Pack__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Text</type>
    <length>100</length>
    <description>Category of the rule pack (e.g., Security, Performance, Best Practice).</description>
</CustomField>