force-app/main/default/objects/Rule_Pack__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Detailed description of the rule pack and its purpose.</description>
</CustomField>