force-app/main/default/objects/Rule_Pack__mdt/fields/Detection_Regex__c.field-meta.xml
<CustomField>
    <fullName>Detection_Regex__c</fullName>
    <label>Detection Regex</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Regular expression pattern used to detect rule violations.</description>
</CustomField>