force-app/main/default/objects/Rule_Pack__mdt/fields/Fix_Template__c.field-meta.xml
<CustomField>
    <fullName>Fix_Template__c</fullName>
    <label>Fix Template</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Template for suggested fixes when a violation is detected.</description>
</CustomField>