force-app/main/default/objects/Rule_Pack__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this rule pack is currently active for scanning.</description>
</CustomField>