force-app/main/default/objects/Rule_Pack__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Text</type>
    <length>50</length>
    <description>Programming language this rule pack applies to (e.g., Apex, JavaScript).</description>
</CustomField>