force-app/main/default/objects/Rule_Pack__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Text</type>
    <length>20</length>
    <description>Severity level for issues detected by this rule pack.</description>
</CustomField>